# atelier

./: .gitmodules  README.md  STREAMS.md  index.html  install.sh  pyproject.toml  server.py  upload_videos.py
docs/minimal-shakaplayer/: index.html
docs/player/minimal-dashjs/: app.js  index.html
docs/player/minimal-shakaplayer/: app.js
docs/player/minimal-shakaplayer/clearkey/: app.js  index.html
player/minimal-dashjs/: app.js  index.html
player/minimal-shakaplayer/: app.js  shaka-player.compiled.debug.js
scripts/: initial_setup.sh  install_requirements.sh
video_sample/: .gitignore  README.md  format_manifests.sh  install.sh
video_sample/public/: public_sample.json  public_sample.md
video_sample/public/abema/mpeg_dash/clearkey/: manifest.mpd
video_sample/public/abema/mpeg_dash/clearkey/fast/: manifest.mpd
video_sample/public/atelier/mpeg_dash/: memo_ffmpeg.md  memo_period.md
video_sample/public/atelier/mpeg_dash/clearkey/: memo.md
video_sample/public/atelier/mpeg_dash/clearkey/output/: stream.mpd
video_sample/public/atelier/mpeg_dash/default/: manifest.mpd  memo.md
video_sample/public/atelier/mpeg_dash/default/segment_timeline_manually/: manifest.mpd  memo.md
video_sample/public/atelier/mpeg_dash/widevine/: manifest.mpd  memo.md  package.sh
video_sample/public/atelier/mpeg_dash/widevine/static/: manifest.mpd  (+2 more)
video_sample/public/blender/progressive_mp4/: frames.csv
video_sample/public/dash/multiperiod/: Manifest_MultiPeriod_1080p.mpd
video_sample/public/dash/singleperiod/clearkey/: package.sh
video_sample/public/mp4/: memo.md
(+28 files in other folders)
